--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="app"></div>
 
     <!-- <script src="src/index.js"></script> -->
-    <script src="src/classesES6.js"></script>
+    <!-- <script src="src/classesES6.js"></script> -->
+    <script src="src/pagination.js"></script>
   </body>
 </html>
