--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- <script src="src/index.js"></script> -->
     <!-- <script src="src/classesES6.js"></script> -->
-    <script src="src/pagination.js"></script>
+    <!-- <script src="src/pagination.js"></script> -->
+    <!-- <script src="src/pricesPerLabel.js"></script> -->
+    <script src="src/object-as-switch.js"></script>
   </body>
 </html>
