--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="src/classesES6.js"></script> -->
     <!-- <script src="src/pagination.js"></script> -->
     <!-- <script src="src/pricesPerLabel.js"></script> -->
-    <script src="src/object-as-switch.js"></script>
+    <!-- <script src="src/object-as-switch.js"></script> -->
+    <script src="src/navigator.js"></script>
   </body>
 </html>
