--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- <script src="src/pagination.js"></script> -->
     <!-- <script src="src/pricesPerLabel.js"></script> -->
     <!-- <script src="src/object-as-switch.js"></script> -->
-    <script src="src/navigator.js"></script>
+    <!-- <script src="src/navigator.js"></script> -->
+    <!-- <script src="src/filter.js"></script> -->
+    <script src="src/myPromise.js"></script>
   </body>
 </html>
