--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="src/object-as-switch.js"></script> -->
     <!-- <script src="src/navigator.js"></script> -->
     <!-- <script src="src/filter.js"></script> -->
-    <script src="src/myPromise.js"></script>
+    <!-- <script src="src/myPromise.js"></script> -->
+    <script src="src/interviewQuest.js"></script>
   </body>
 </html>
