ui-suit- first commit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- <script src="src/navigator.js"></script> -->
     <!-- <script src="src/filter.js"></script> -->
     <!-- <script src="src/myPromise.js"></script> -->
-    <script src="src/interviewQuest.js"></script>
+    <!-- <script src="src/interviewQuest.js"></script> -->
+    <script src="src/ui-suit.js"></script>
   </body>
 </html>
