--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- <script src="src/navigator.js"></script> -->
     <!-- <script src="src/filter.js"></script> -->
     <!-- <script src="src/myPromise.js"></script> -->
-    <!-- <script src="src/interviewQuest.js"></script> -->
-    <script src="src/ui-suit.js"></script>
+    <script src="src/interviewQuest.js"></script>
+    <!-- <script src="src/ui-suit.js"></script> -->
+    <!-- <script src="src/services/canvas.service.js"></script> -->
+    <!-- <script type="module" src="src/canvas.js"></script> -->
   </body>
 </html>
